[KIECLOUD-646] - Rebranding changes on the kie-cloud-operator repository
Signed-off-by: spolti <fspolti@redhat.com>

--- a/deploy/crs/v2/kieapp_rhpam_authoring-ha.yaml
+++ b/deploy/crs/v2/kieapp_rhpam_authoring-ha.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rhpam-authoring-ha
   annotations:
     consoleName: rhpam-authoring-ha
-    consoleTitle: PAM Authoring HA
-    consoleDesc: Deploys a PAM Authoring HA environment
+    consoleTitle: BAMOE Authoring HA
+    consoleDesc: Deploys a BAMOE Authoring HA environment
 spec:
   environment: rhpam-authoring-ha
