--- a/deploy/crs/v2/kieapp_rhpam_trial.yaml
+++ b/deploy/crs/v2/kieapp_rhpam_trial.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rhpam-trial
   annotations:
     consoleName: rhpam-trial
-    consoleTitle: PAM Trial
-    consoleDesc: Deploys a PAM Trial environment
+    consoleTitle: BAMOE Trial
+    consoleDesc: Deploys a BAMOE Trial environment
 spec:
   environment: rhpam-trial
