--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -37,20 +37,44 @@ spec:
           value: "true"
         - name: DEBUG
           value: "false"
+        - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-kieserver-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-controller-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_BC_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-businesscentral-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-businesscentral-monitoring-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-smartrouter-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-process-migration-rhel8:8.0.0
+        - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_8.0.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-dashbuilder-rhel8:8.0.0
+        - name: RELATED_IMAGE_OSE_CLI_IMAGE_8.0.0
+          value: registry.redhat.io/openshift4/ose-cli:v4.10
+        - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.0
+          value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
+        - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.0
+          value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+        - name: RELATED_IMAGE_DATAGRID_IMAGE_8.0.0
+          value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.1
+        - name: RELATED_IMAGE_BROKER_IMAGE_8.0.0
+          value: registry.redhat.io/amq7/amq-broker-rhel8:7.9
         - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-kieserver-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-controller-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_BC_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-businesscentral-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-businesscentral-monitoring-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-smartrouter-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-process-migration-rhel8:7.13.0
         - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.13.0
-          value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.13.0
+          value: registry.connect.redhat.com/ibm-bamoe/bamoe-dashbuilder-rhel8:7.13.0
         - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.13.0
           value: registry.redhat.io/openshift4/ose-cli:v4.10
         - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.0
@@ -58,38 +82,8 @@ spec:
         - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.0
           value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
         - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.0
-          value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.1
-        - name: RELATED_IMAGE_BROKER_IMAGE_7.13.0
-          value: registry.redhat.io/amq7/amq-broker-rhel8:7.9
-        - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.12.1
-          value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.12.1
-        - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.12.1
-          value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.12.1
-        - name: RELATED_IMAGE_DM_DC_IMAGE_7.12.1
-          value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_BC_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.12.1
-        - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.12.1
-          value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.12.1
-        - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.12.1
-          value: registry.redhat.io/openshift4/ose-cli:v4.10
-        - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.12.1
-          value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-        - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.12.1
-          value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-        - name: RELATED_IMAGE_DATAGRID_IMAGE_7.12.1
           value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-        - name: RELATED_IMAGE_BROKER_IMAGE_7.12.1
+        - name: RELATED_IMAGE_BROKER_IMAGE_7.13.0
           value: registry.redhat.io/amq7/amq-broker:7.8
         - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
           value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
@@ -103,7 +97,7 @@ spec:
           value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
         - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.10
           value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.10
-        image: quay.io/kiegroup/kie-cloud-operator:7.13.0
+        image: quay.io/kiegroup/kie-cloud-operator:8.0.0
         imagePullPolicy: Always
         name: business-automation-operator
         resources: {}
