--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -7,6 +7,5 @@ roleRef:
   kind: Role
   name: business-automation-operator
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: ServiceAccount
+- kind: ServiceAccount
   name: business-automation-operator
