--- a/deploy/olm-catalog/dev/8.0.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -6,7 +6,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.0
-    createdAt: "2022-07-19 14:22:17"
+    createdAt: "2022-07-19 18:52:56"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.8.0.0-1-dev-s44qlpxrvj
+  name: businessautomation-operator.8.0.0-1-dev-l89bnpdffw
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -373,7 +373,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.8.0.0-1-dev-s44qlpxrvj
+    operated-by: businessautomation-operator.8.0.0-1-dev-l89bnpdffw
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -385,5 +385,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.8.0.0-1-dev-s44qlpxrvj
-  version: 8.0.0-1+s44qlpxrvj
+      operated-by: businessautomation-operator.8.0.0-1-dev-l89bnpdffw
+  version: 8.0.0-1+l89bnpdffw
